feat: Implementación completa del portal de pacientes y agendamiento de citas
- Se implementó el bloqueo de cuentas por intentos fallidos para usuarios y pacientes.
- Se creó el flujo de verificación de DPI para redirigir a login o registro.
- Se implementó el formulario y lógica de registro de nuevos pacientes.
- Se desarrolló el portal de pacientes con visualización y agendamiento de citas.
- Se corrigieron errores de compilación, validación y lógica en controladores y servicios.
- Se mejoró la UX del formulario de registro con auto-generación de username y contraseña.